# drasi-test-infra

./: CLAUDE.md
e2e-test-framework/: CLAUDE.md  Cargo.toml  README.md  test_config_parse.rs
e2e-test-framework/data-collector/src/: lib.rs
e2e-test-framework/data-collector/src/source/: mod.rs  source_change_recorder.rs
e2e-test-framework/examples/: readme.md
e2e-test-framework/examples/building_comfort/: readme.md
e2e-test-framework/examples/building_comfort/drasi_server/: config.json  run_test.sh  run_test_debug.sh
e2e-test-framework/examples/building_comfort/drasi_server_grpc/: README.md  config.json  generate_grpc_stubs.sh  grpc_event_receiver.py  grpc_event_receiver_proper.py  grpc_reaction_client.py  run_test.sh  start_grpc_test.sh  test_grpc_connection.py
e2e-test-framework/examples/building_comfort/drasi_server_http/: config.json  event_receiver.py  run_test.sh
e2e-test-framework/examples/building_comfort/drasi_server_internal/: config.json  config_debug.json  run_test.sh  test_output.sh  (+3 more)
e2e-test-framework/examples/reaction_logging/: config.json
e2e-test-framework/test-data-store/src/: lib.rs
e2e-test-framework/test-run-host/: Cargo.toml  build.rs
e2e-test-framework/test-run-host/examples/: unified_handler_example.rs
e2e-test-framework/test-run-host/src/: drasi_server_api_impl.rs  grpc_converters.rs  lib.rs
e2e-test-framework/test-service/: Cargo.toml
e2e-test-framework/test-service/src/: main.rs  openapi.rs
e2e-test-framework/test-service/tests/: api_integration_test.rs  reaction_api_tests.rs  signal_cleanup_test.rs  swagger_test.rs
(+116 files in other folders)
