[workspace]

members = [
  "data-collector",
  "proxy",
  "reactivator",
  "test-data-store",
  "test-run-host",
  "test-service",
  
  # Internal
  "infrastructure/comms-abstractions",
  "infrastructure/comms-dapr",
]

resolver = "2"

[workspace.dependencies]
drasi-server = { path = "/Users/allenjones/dev/agentofreality/drasi/drasi-server" }